- CHG: Fall back to cached log data if forced refresh fails in log view
       and the user chooses to go off-line again. (Stefan Fuhrmann)
- CHG: Finalize toolbar button icons. (Stefan Fuhrmann)
- CHG: The changelists are now sorted so that first the user changelists are
       shown, then the items not in a changelist and the ignore-on-commit
       changelist last. (Stefan)

Version 1.5.0-beta1
- NEW: Implemented 'merge reintegrate': new page in the merge wizard. (Stefan)
- NEW: In log window: <SHIFT> or <CTRL> when hitting 'Refresh' or F5
       will cause the log cache to be bypassed and updated (Stefan Fuhrmann)
- NEW: Tentatively added new 'Allow ambiguous URLs' setting in 'Log Caching'.
       May or may not be removed until RC1 (Stefan Fuhrmann).
- NEW: Revision graph now shows 'offline' state and supports F5 to update
       (Stefan Fuhrmann).
- BUG: Inserting a history log message in the commit dialog when 
       bugtraq:append is set to 'false' inserted the bug ID and the commit
       message reversed. (Stefan)
- BUG: The slider positions could be restored incorrectly in the commit and
       log dialog. (Stefan)
- BUG: The merge ranges were not properly sorted for a rev-range merge. (Stefan)
- BUG: Switching the left/right view in TortoiseMerge lost edits. (Stefan)
- BUG: The repo browser showed an empty entry when showing a repository on an
       UNC path. (Stefan)
- BUG: The browse button in the merge wizard reintegrate page did
       not work at all. (Stefan)
- BUG: The file-open dialog in the hook scripts dialog did not show if the
       path in the edit box did not exist. (Stefan)
- BUG: Minor fixes in the 'Log Caching' settings page (Stefan Fuhrmann)
- BUG: Revision graph could hang on empty repositories (Stefan Fuhrmann)
- BUG: Incomplete revision parameter checking could crash the log cache query
       (Stefan Fuhrmann) 
- CHG: Client-side hook scripts are now called with the predefined parameters
       in a predefined order. (Stefan)